fix: Adding a isStuckAtGottom property to the useStickyHeader hook and using it to override rounded corners

--- a/src/container/styles.scss
+++ b/src/container/styles.scss
@@ -59,6 +59,13 @@
       inset-block-start: calc(-1 * #{awsui.$border-divider-section-width});
     }
   }
+
+  &.with-stuck-sticky-header {
+    &.with-stuck-sticky-header-at-bottom {
+      border-end-end-radius: 0;
+      border-end-start-radius: 0;
+    }
+  }
 }
 
 .with-side-media {
